Update and rename SnakeBitsy.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta charset="UTF-8">
 
-<title>My Bitsy Game By Me</title>
+<title>Egle the Queen of Snakes</title>
 
 <script type="text/bitsyGameData" id="exportedGameData">
 EGLE the Queen of Snakes
